<resources>
	<string name="title_section1">Common</string>
	<string name="title_section2">All</string>
	<!-- Strings for 'all' section -->
	<string name="all_apps">All Installed Aplications</string>
	<string name="ok">OK</string>
	<!-- end -->
    <string name="app_name">SysTweak</string>
    <string name="hello_world">Please note:\nThese settings are designed for the galaxy s2 i9100 the international version. 
        It might or might not work on other devices. Enable the services you want to run\n</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="title_activity_main">System Tweaks</string>
    <!-- Things to toggle -->
	<string name="RomManager">Rom Manager</string>
	<string name="LiveWallpapers">Live Wallpapers</string>
	<string name="CMWallpapers">CyanogenMod Wallpapers</string>
	<string name="GoogleTextToSpeech">Google Text-to-speak-engine</string>
	<string name="gmail">Gmail</string>
	<string name="TVOut">TVOut</string>
	<string name="phone">Phone</string>
	<string name="apollo">Apollo</string>
	<string name="DSPManager">DSPManager</string>
	<string name="email">Email</string>
	<string name="news_and_weather">News and weather</string>
	<string name="Movie_Studio">Video Editor</string>
	<string name="google_talk">Google talk</string>
	<string name="terminal_emulator">Terminal emulator</string>
	<string name="torch">Torch</string>
	<string name="media_scanner">Media Scanner</string>
	<!-- Not yet added -->
	<!-- end -->
	<string name="boot">Set on Boot</string>
	<string name="apply">Apply Settings</string>
	<string name="showadv">Show Dangerous settings</string>
	<string name="settings_enable_all">Enable everything</string>
	<string name="about_graphics">Graphics thanks to: </string>
	<string name="about_translations">Translations thanks to:</string>
	<string name="about_about">About:</string>
	<string name="about_translations_thanks">\n
	    French - Minidou-77\n
	    Português - Ghelfalath\n
	    Arabic - Kadhim7\n
	    Italian - ginlik1996\n
	    Danish - JosseX\n
	    Polish - dedopl\n
	    Español - churapa\n
	    Romana - mamadraq\n
	    German - KcDaRookie\n</string>
</resources>