<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/lblNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="false"
        android:text="@string/hello_world"
        tools:context=".MainActivity" />
<ScrollView 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:id="@+id/scrMain"
    android:layout_below="@id/lblNote">
    <RelativeLayout 
        android:id="@+id/lyContents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        
	    <Switch
		    android:id="@+id/swRomManager"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/RomManager" />
	    <Switch android:layout_below="@id/swRomManager" android:id="@+id/swLiveWallpapers" 
	        	android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/LiveWallpapers" />
	    
	    <Switch android:layout_below="@id/swLiveWallpapers" android:id="@+id/swCMWallpapers" android:visibility="visible"
	        	android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/CMWallpapers" />
	    
	    <Switch android:layout_below="@id/swCMWallpapers" android:id="@+id/swGTTS" android:visibility="visible"
	        	android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/GoogleTextToSpeech" />
	    
	    <Switch android:layout_below="@id/swGTTS" android:id="@+id/swMovieStudio" android:visibility="visible"
	        	android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/Movie_Studio" />
	    
	    <Switch android:layout_below="@id/swMovieStudio" android:id="@+id/swGmail" android:visibility="visible"
	        	android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/gmail" />
	    
	    <Switch android:layout_below="@id/swGmail" android:id="@+id/swTvOut" android:visibility="visible"
	        	android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/TVOut" />
	    <Switch android:layout_below="@id/swTvOut" android:id="@+id/swPhone" android:visibility="visible"
	        	android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/phone" />
	    
	    <Switch android:layout_below="@id/swPhone" android:id="@+id/swApollo" android:visibility="visible"
	        	android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/apollo" />
	    <Switch android:layout_below="@id/swApollo" android:id="@+id/swDSPManager" android:visibility="visible"
	        	android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/DSPManager" />
	    <Switch android:layout_below="@id/swDSPManager" android:id="@+id/swEmail" android:visibility="visible"
	        	android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/email" />
	    <Switch android:layout_below="@id/swEmail" android:id="@+id/swNewsAndWeather" android:visibility="visible"
	        	android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/news_and_weather" />
	    <Switch android:layout_below="@id/swNewsAndWeather" android:id="@+id/swGTalk" android:visibility="visible"
	        	android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/google_talk" />
	    <Switch android:layout_below="@id/swGTalk" android:id="@+id/swTerminalEmulator" android:visibility="visible"
	        	android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/terminal_emulator" />
	    <Switch android:layout_below="@id/swTerminalEmulator" android:id="@+id/swTorch" android:visibility="visible"
	        	android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/torch" />
	    
	    <Button android:layout_below="@id/swTorch" android:id="@+id/btnSetOnBoot"
	        	android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/apply" />
	</RelativeLayout>
</ScrollView>
</RelativeLayout>
